updated README with deployment information